fixing padding/alignment on mini alerts

--- a/regulations/static/regulations/css/less/module/universal-landing.less
+++ b/regulations/static/regulations/css/less/module/universal-landing.less
@@ -134,7 +134,7 @@
         margin-left: 100px;
         .border-top-light;
         margin-bottom: 0.875em;
-        padding-top: 0.5em;
+        padding: 0.5em 15px 0 0;
         clear: both;
         overflow: auto;
         
